--- a/.env.example
+++ b/.env.example
@@ -1,80 +1,113 @@
 # =============================================================================
-# V Rising ARM64 Server - Environment Variables
+# V Rising ARM64 Server - Environment Variables (Production Template)
 # =============================================================================
-# Copie este arquivo para .env e ajuste os valores conforme necessário
-# Para EasyPanel: copie estas variáveis para a aba "Environment" do app
+# Copy this file to .env and customize for your server
+# Or configure these variables directly in EasyPanel/docker-compose
+# =============================================================================
 
 # -----------------------------------------------------------------------------
-# CONFIGURAÇÃO BÁSICA
+# BASIC CONFIGURATION
 # -----------------------------------------------------------------------------
 
-# Timezone (padrão: UTC)
+# Timezone (use TZ database names)
+# https://en.wikipedia.org/wiki/List_of_tz_database_time_zones
 TZ=America/Sao_Paulo
 
-# Nome do servidor (aparece no server browser)
-SERVERNAME=VRising-ARM64-Server
+# Server name (displayed in server browser)
+SERVERNAME=VRising-ARM64
+
+# -----------------------------------------------------------------------------
+# SERVER BEHAVIOR
+# -----------------------------------------------------------------------------
+
+# Update server on startup (true/false)
+# Set to false after initial setup if you want faster restarts
+UPDATE_SERVER=true
+
+# Number of days to keep log files
+LOGDAYS=30
 
 # -----------------------------------------------------------------------------
 # BEPINEX / PLUGINS
 # -----------------------------------------------------------------------------
 
-# Habilitar plugins BepInEx (true/false)
+# Enable BepInEx plugin support (true/false)
 ENABLE_PLUGINS=true
 
 # -----------------------------------------------------------------------------
-# WINE PERFORMANCE
+# BOX64 DYNAREC (ARM64 Performance Tuning)
 # -----------------------------------------------------------------------------
 
-# Habilitar Large Address Aware (recomendado)
-WINE_LARGE_ADDRESS_AWARE=1
-
-# Debug do Wine (desabilitado para performance)
-WINEDEBUG=-all
-
-# -----------------------------------------------------------------------------
-# BOX64 DYNAREC (ARM64 ONLY)
-# -----------------------------------------------------------------------------
-
-# Habilitar Dynarec (recompilação dinâmica)
+# Enable dynamic recompilation (1=enabled, 0=disabled)
 BOX64_DYNAREC=1
 
-# Otimizações de performance
-BOX64_DYNAREC_FASTROUND=1
-BOX64_DYNAREC_FASTNAN=1
-BOX64_DYNAREC_SAFEFLAGS=0
+# Larger compilation blocks (0-3, higher = faster but uses more memory)
 BOX64_DYNAREC_BIGBLOCK=2
+
+# Fast floating point rounding (1=enabled)
+BOX64_DYNAREC_FASTROUND=1
+
+# Fast NaN handling (1=enabled)
+BOX64_DYNAREC_FASTNAN=1
+
+# Reduce safety checks (0-2, lower = faster)
+BOX64_DYNAREC_SAFEFLAGS=0
+
+# Memory ordering (0=relaxed, 1=strong)
 BOX64_DYNAREC_STRONGMEM=0
+
+# Enable experimental optimizations (1=enabled)
 BOX64_DYNAREC_BLEEDING_EDGE=1
 
-# Memory optimization
+# Memory allocation optimization (1=enabled)
 BOX64_MALLOC_HACK=1
 
-# -----------------------------------------------------------------------------
-# V RISING SERVER SETTINGS (via ServerHostSettings.json)
-# -----------------------------------------------------------------------------
-# Estas variáveis são para referência - o tsx-cloud/vrising-ntsync
-# usa os arquivos JSON diretamente. Configure via:
-# ./vrising/persistentdata/Settings/ServerHostSettings.json
+# Suppress Box64 banner (1=hidden)
+BOX64_NOBANNER=1
 
-# PORT=9876
-# QUERY_PORT=9877
-# MAX_USERS=10
-# MAX_ADMINS=2
-# SAVE_NAME=world1
-# SERVER_PASSWORD=
+# Box64 log level (0=disabled, 1=enabled)
+BOX64_LOG=0
 
 # -----------------------------------------------------------------------------
-# RCON (opcional)
+# WINE CONFIGURATION
 # -----------------------------------------------------------------------------
 
-# RCON_ENABLED=true
-# RCON_PORT=25575
-# RCON_PASSWORD=your_strong_password_here
+# Disable Wine debug output (production)
+WINEDEBUG=-all
+
+# Enable large address aware
+WINE_LARGE_ADDRESS_AWARE=1
+
+# DLL overrides for BepInEx (set automatically when ENABLE_PLUGINS=true)
+# WINEDLLOVERRIDES=winhttp=n,b
 
 # -----------------------------------------------------------------------------
-# API/METRICS (opcional)
+# V RISING SERVER SETTINGS
 # -----------------------------------------------------------------------------
+# These are NOT environment variables - configure via JSON files:
+# - ServerHostSettings.json: Network, RCON, Admin settings
+# - ServerGameSettings.json: Gameplay, PvP, Castle settings
+#
+# Files location (after first start):
+# /mnt/vrising/persistentdata/Settings/ServerHostSettings.json
+# /mnt/vrising/persistentdata/Settings/ServerGameSettings.json
 
-# API_ENABLED=true
-# API_BIND_ADDRESS=0.0.0.0
-# API_BIND_PORT=9090
+# -----------------------------------------------------------------------------
+# RESOURCE RECOMMENDATIONS (for Oracle Ampere A1)
+# -----------------------------------------------------------------------------
+#
+# Minimum:
+#   CPU: 4 cores
+#   RAM: 8GB
+#   Disk: 15GB
+#
+# Recommended (your setup):
+#   CPU: 4 cores @ 3GHz
+#   RAM: 24GB (allocate 18G to container)
+#   Disk: 25GB+ SSD
+#
+# Memory breakdown:
+#   - V Rising Server: 6-10GB
+#   - Wine/Box64: 2-4GB
+#   - BepInEx/Mods: 1-2GB
+#   - System overhead: 2-4GB
